{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "CameraControls",
            "id": "3a393435-af95-45e2-b0a0-452cdf6ab508",
            "actions": [
                {
                    "name": "CamMove",
                    "type": "Value",
                    "id": "92f73f54-d10d-4b84-b6e7-a2e3c2270799",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "1D Axis",
                    "id": "1f73bf13-837c-4f95-aea9-bd536014b773",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CamMove",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "2852d3cb-8abf-4136-acb6-471862f65279",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CamMove",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "11fd9f2f-d0f5-4d38-83cc-86612378682b",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CamMove",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        }
    ],
    "controlSchemes": []
}